--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,11 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: us-west-2
-  app: multi-docker
-  env: MultiDocker-env
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
   bucket_name: elasticbeanstalk-us-west-2-379284310072
   bucket_path: docker-multi
   on:
     branch: master
-  access_key_ld: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY 
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
