Deploying without docker push

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ after_success:
   # Login into the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin 
   # Take those images and push them to socker hub
-  - docker push maher07/multi-client
-  - docker push maher07/multi-nginx
-  - docker push maher07/multi-server
-  - docker push maher07/multi-worker
+  #- docker push maher07/multi-client
+  #- docker push maher07/multi-nginx
+  #- docker push maher07/multi-server
+  #- docker push maher07/multi-worker
 deploy:
   provider: elasticbeanstalk
   region: us-west-2
